source/styles/components/_home-advisors.scss
/* Horizontal advisors on homepage */

.home-available-advisors {
  margin: 0;
  text-align: left;
  a {
    margin: 0;
  }
}

.home-advisor-horizontal {
  width: 100%;
  overflow-x:scroll;
  white-space: nowrap;
  float:left;
  position: relative;
  @media (min-width: $screen-lg-min)  {
    overflow-x: hidden;
    white-space: normal;
  }
}

.home-advisor-tile-simple {
  display: inline-block;
  border-radius: $border-radius-small;
  text-align: center;
  width: 40%;
  a {
    color: #000;
    text-decoration: none;
  }
  &:hover {
    background: $tan-light;
  }
  @media (min-width: 450px) {
    width: 25%;
  }
}

.home-advisor-main-body {
  font-size: 10px;
  p {
    display: block;
  }
  p {
    margin-top: -1em;
  }
}

.home-advisor-stars {
  margin: 1em auto;
} 

